Firefox does not seem to support IPv6 unless DNS-over-HTTPS is enabled
Categories
(Core :: Networking: DNS, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox126 | --- | verified |
People
(Reporter: selim, Assigned: serfreeman1337)
References
(Blocks 3 open bugs)
Details
(Whiteboard: [necko-triaged])
Attachments
(6 files)
My ISP has recently enabled IPv6 and I've configured my home network accordingly.
However, all of the tests listed below fail to detect full IPv6 support on Firefox with default settings:
- https://test-ipv6.com/ ("Your browser has real working IPv6 address - but is avoiding using it.")
- https://ipv6-test.com/
- https://ipv6test.google.com/
Enabling DNS-over-HTTPS in Firefox settings and choosing Cloudflare as the server resolves the problem.
Configuring Windows 11 to use Cloudflare DoH system-wide does not resolve the problem, although navigating to https://1.1.1.1/help/ confirms that I'm connected to Cloudflare DoH.
I cannot reproduce this with Edge or Chrome. They seem to work fine with their default settings.
| Reporter | ||
Comment 1•3 years ago
|
||
| Reporter | ||
Comment 2•3 years ago
|
||
| Reporter | ||
Comment 3•3 years ago
|
||
Comment 4•3 years ago
|
||
Could you capture some HTTP logs when not using DoH?
I'm thinking the problem might be that the native DNS doesn't give out IPv6? Or maybe there's some other bug?
https://firefox-source-docs.mozilla.org/networking/http/logging.html
Thanks!
| Reporter | ||
Comment 5•3 years ago
|
||
Here are two logs for ipv6test.google.com with DoH enabled and disabled.
Comment 6•3 years ago
|
||
Thank you for the logs, very useful. It seems like the main difference between DoH and non-DoH is that for DoH we return the IPv6 addresses first, whereas for native DNS we don't - we just take them as they come from getaddrinfo.
We can probably just sort the addresses so the IPv6 ones come first. As far as I can tell, this has always been the behaviour of Firefox.
The AddrInfo object is created here.
We should probably sort them here. We should guard this by a pref, in case the preference for IPv6 starts causing other issues.
Comment 8•2 years ago
|
||
Bug 1874094 and bug 920367 also seem related to this.
| Assignee | ||
Comment 9•2 years ago
|
||
Introduce network.dns.preferIPv6 pref to place IPv6 addresses first in a DNS lookup result.
Updated•2 years ago
|
Updated•2 years ago
|
Comment 10•2 years ago
•
|
||
https://hg.mozilla.org/integration/autoland/rev/4f7031f621f979e50d20954ab1ce5407d3bb019b
Bug 1810362 - Sort the addresses in a DNS lookup result so the IPv6 ones come first. r=valentin,necko-reviewers,kershaw
Comment 11•2 years ago
|
||
| bugherder | ||
Updated•2 years ago
|
Comment 12•2 years ago
|
||
Unfortunately I'm unable to verify this issue as I don't have access to an IPv6 connection. Selim Şumlu, could you kindly verify if the issue persists in the latest Firefox 126.0 version?
Comment 14•2 years ago
|
||
Selim Şumlu, thank you for confirming.
Verified as fixed based on Comment 13.
| Reporter | ||
Comment 16•2 years ago
|
||
This seems to be broken again in the latest Nightly so I'm reopening this bug. Symptoms are the same.
| Reporter | ||
Comment 17•2 years ago
|
||
Quick update: Appearently this fix is now behind behind the network.dns.preferIPv6 pref, which is set to false by default. Toggling it to true fixes the issue.
Description
•