Bug 1810362 - Sort the addresses in a DNS lookup result so the IPv6 ones come first. r=valentin,necko-reviewers,kershaw

Introduce network.dns.preferIPv6 pref to place IPv6 addresses first in a DNS lookup result.

Differential Revision: https://phabricator.services.mozilla.com/D206843